[22] Spacing the scrollbars fix #22

--- a/css/index.css
+++ b/css/index.css
@@ -73,14 +73,27 @@ body {
 
 ::-webkit-scrollbar {
   background: transparent;
-  width: 5px;
-  height: 5px;
-  margin: 1px;
+  width: 14px;
+  height: 14px;
 }
 
 ::-webkit-scrollbar-thumb {
+  width: 5px;
+  height: 5px;
   background: #002d4f;
   border-radius: 5px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+}
+
+::-webkit-scrollbar-corner {
+  display: none;
+}
+
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
 }
 
 .command {
